# bookmark-browser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  uninstall.sh
assets/: bookmark-browser.desktop
docs/: current-phase.md  overview.md
src/: main.rs
